add role property, admin controller, modify SecurityConfig